Fixed footnote covering part of the body

--- a/pre_trained_models_app/static/css/style.css
+++ b/pre_trained_models_app/static/css/style.css
@@ -10,3 +10,7 @@ footer{
   border-top: 15 px solid #007CBD;
   background-color: #004b87;
 }
+
+body {
+  margin-bottom: 100px;
+}
